--- a/ConsoleBot/ConsoleBot.csproj
+++ b/ConsoleBot/ConsoleBot.csproj
@@ -11,4 +11,9 @@
     <ProjectReference Include="..\HW-5 DLL\Otus.ToDoList.ConsoleBot\Otus.ToDoList.ConsoleBot.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\DataAccess\" />
+    <Folder Include="Infrastructure\DataAccess\" />
+  </ItemGroup>
+
 </Project>
