--- a/ConsoleBot/ConsoleBot.csproj
+++ b/ConsoleBot/ConsoleBot.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\HW-8 DLL\Otus.ToDoList.ConsoleBot\Otus.ToDoList.ConsoleBot.csproj" />
+    <ProjectReference Include="..\HW-8 DLL\Otus.ToDoList.ConsoleBot\Otus.ToDoList.ConsoleBot.csproj" />
   </ItemGroup>
 
 </Project>
